Adding empty controller

--- a/src/GroceryStore.WebApi/GroceryStore.WebApi.csproj
+++ b/src/GroceryStore.WebApi/GroceryStore.WebApi.csproj
@@ -5,7 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GroceryStore.Sdk\GroceryStore.Sdk.csproj" />
   </ItemGroup>
 
 
