Adding empty project structure.

--- a/src/GroceryStore.Aapter/GroceryStore.Aapter.csproj
+++ b/src/GroceryStore.Aapter/GroceryStore.Aapter.csproj
@@ -1,18 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\GroceryStore.Aapter\GroceryStore.Aapter.csproj" />
     <ProjectReference Include="..\GroceryStore.Boundary\GroceryStore.Boundary.csproj" />
     <ProjectReference Include="..\GroceryStore.Sdk\GroceryStore.Sdk.csproj" />
   </ItemGroup>
-
 
 </Project>
