--- a/src/GroceryStore.Aapter/GroceryStore.Aapter.csproj
+++ b/src/GroceryStore.Aapter/GroceryStore.Aapter.csproj
@@ -9,4 +9,12 @@
     <ProjectReference Include="..\GroceryStore.Sdk\GroceryStore.Sdk.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
+  </ItemGroup>
+
 </Project>
