--- a/src/GroceryStore.Aapter/GroceryStore.Adapter.csproj
+++ b/src/GroceryStore.Aapter/GroceryStore.Adapter.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -9,10 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GroceryStore.Aapter\GroceryStore.Adapter.csproj" />
     <ProjectReference Include="..\GroceryStore.Boundary\GroceryStore.Boundary.csproj" />
     <ProjectReference Include="..\GroceryStore.Sdk\GroceryStore.Sdk.csproj" />
   </ItemGroup>
-
 
 </Project>
