--- a/src/GroceryStore.WebApi/appsettings.Development.json
+++ b/src/GroceryStore.WebApi/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "SqlServer": "server=ABC\\SQLEXPRESS2012; database=EmployeeDB;Trusted_Connection=True;"
   }
 }
