--- a/src/GroceryStore.WebApi/appsettings.json
+++ b/src/GroceryStore.WebApi/appsettings.json
@@ -6,5 +6,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "SwaggerSettings": {
+    "Title": "",
+    "Description": "",
+    "ContactName": "",
+    "ContactMail": "",
+    "ContactUrl": "",
+    "LicenseName": "",
+    "LicenseUrl": ""
+  },
   "AllowedHosts": "*"
 }
